Closed Bug 229442 Opened 21 years ago Closed 15 years ago

</xpcom/base/nsError.h> NS_SUCCEEDED() code cleanup

Categories

(Core :: XPCOM, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: sgautherie, Assigned: sgautherie)

Details

(Keywords: fixed1.9.1, Whiteboard: [fixed1.9.1b4])

Attachments

(1 file, 2 obsolete files)

 
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.7alpha
Comment on attachment 137984 [details] [diff] [review]
(Av1) <nsError.h>, |NS_SUCCEEDED()|


I have no compiler: Could you compile/test/review it ? Thanks.
Attachment #137984 - Flags: review?(BradleyJunk)
Summary: </xpcom/base/nsError.h> NS_FAILED()/NS_SUCCEEDED() cleanup → </xpcom/base/nsError.h> NS_SUCCEEDED() cleanup
Comment on attachment 137984 [details] [diff] [review]
(Av1) <nsError.h>, |NS_SUCCEEDED()|

This change looks ok to me, but you need dougt's ok since he's the owner of
XPCOM
Attachment #137984 - Flags: review?(BradleyJunk) → review?(dougt)
Attachment #137984 - Flags: superreview?(brendan)
Summary: </xpcom/base/nsError.h> NS_SUCCEEDED() cleanup → </xpcom/base/nsError.h> NS_SUCCEEDED() code cleanup
Comment on attachment 137984 [details] [diff] [review]
(Av1) <nsError.h>, |NS_SUCCEEDED()|

It is much clearer to me without this change.
Attachment #137984 - Flags: review?(dougt) → review-
Attachment #137984 - Attachment description: (Av1) → (Av1) <nsError.h>, |NS_SUCCEEDED()|
Attachment #137984 - Attachment is obsolete: true
Attachment #137984 - Flags: superreview?(brendan)
Attached patch (Av2) <nsError.h>, |NS_FAILED()| (obsolete) — Splinter Review
2nd (and last) attempt, the other way round.
Comment on attachment 138027 [details] [diff] [review]
(Av2) <nsError.h>, |NS_FAILED()|


'r=?': (see comment 5)
I have no compiler: Could you compile/test/review it ? Thanks.
Attachment #138027 - Flags: review?(dougt)
Target Milestone: mozilla1.7alpha → ---
QA Contact: xpcom
Attachment #138027 - Flags: review?(doug.turner) → review+
Av2, 5 years later.
Attachment #367208 - Flags: review?(doug.turner)
Comment on attachment 367208 [details] [diff] [review]
(Av3) <nsError.h> whitespace cleanup ++
[Checkin: Comment 9 & 12]

5 years.  wow. ;)
Attachment #367208 - Flags: review?(doug.turner) → review+
Attachment #138027 - Attachment is obsolete: true
Comment on attachment 367208 [details] [diff] [review]
(Av3) <nsError.h> whitespace cleanup ++
[Checkin: Comment 9 & 12]


http://hg.mozilla.org/mozilla-central/rev/9c775a06abec
Attachment #367208 - Attachment description: (Av3) <nsError.h> whitespace cleanup ++ → (Av3) <nsError.h> whitespace cleanup ++ [Checkin: Comment 9]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
Comment on attachment 367208 [details] [diff] [review]
(Av3) <nsError.h> whitespace cleanup ++
[Checkin: Comment 9 & 12]

"approval1.9.1=?":
trivially stay in sync'.
Attachment #367208 - Flags: approval1.9.1?
Comment on attachment 367208 [details] [diff] [review]
(Av3) <nsError.h> whitespace cleanup ++
[Checkin: Comment 9 & 12]

a191=beltzner
Attachment #367208 - Flags: approval1.9.1? → approval1.9.1+
Comment on attachment 367208 [details] [diff] [review]
(Av3) <nsError.h> whitespace cleanup ++
[Checkin: Comment 9 & 12]


http://hg.mozilla.org/releases/mozilla-1.9.1/rev/3fab14ea52f8
Attachment #367208 - Attachment description: (Av3) <nsError.h> whitespace cleanup ++ [Checkin: Comment 9] → (Av3) <nsError.h> whitespace cleanup ++ [Checkin: Comment 9 & 12]
Keywords: fixed1.9.1
Whiteboard: [fixed1.9.1b4]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: