Bug 229442 - </xpcom/base/nsError.h> NS_SUCCEEDED() code cleanup; (Av3) <nsError.h> whitespace cleanup ++; r=doug.turner